--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -27,7 +27,8 @@ author_profile: true
     {% endfor %}
   {% endfor %}
 {% else %}
-  {% for post in site.publications reversed %}
+  {% assign sorted_publications = site.publications | sort: "pos" %}
+  {% for post in sorted_publications %}
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
