--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,9 +13,10 @@ author_profile: true
 
 <!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
-  {% for category in site.publication_category  %}
+  {% assign sorted_publications = site.publications | sort: "pos" %}
+  {% for category in site.publication_category %}
     {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
+    {% for post in sorted_publications %}
       {% if post.category != category[0] %}
         {% continue %}
       {% endif %}
@@ -32,6 +33,7 @@ author_profile: true
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
+
 
 
 
